--- a/inst/quarto/id/_extensions/id/footer.html
+++ b/inst/quarto/id/_extensions/id/footer.html
@@ -3,7 +3,7 @@
 <div class="basic-footer">
   <div class="column-page">
 
-<p style="text-align: right"><span class="san-serif" style="font-size: 1.5em;"><i class="fa-solid fa-head-side-virus" aria-label="head-side-virus"></i><span style="font-weight: 600;">&nbsp;&nbsp;I&nbsp;D&nbsp;E&nbsp;A&nbsp;S</span></span> <br> <span class="serif" style="font-size: 1.3em;"><span style = "font-weight: 700;">I</span>nfectious <span style = "font-weight: 700;">D</span>isease <span style = "font-weight: 700;">E</span>pidemiology and <span style = "font-weight: 700;">A</span>pplied <span style = "font-weight: 700;">S</span>tatistics</span></p>
+<p style="text-align: right"><span class="san-serif" style="font-size: 1.5em;"><i class="fa-solid fa-head-side-virus" aria-label="head-side-virus"></i><span style="font-weight: 600;">&nbsp;&nbsp;I&nbsp;D&nbsp;E&nbsp;A&nbsp;S</span></span> <br> <span class="serif" style="font-size: 1.3em;"><span style = "font-weight: 700;">I</span>nfectious <span style = "font-weight: 700;">D</span>isease <span style = "font-weight: 700;">E</span>pidemiology & <span style = "font-weight: 700;">A</span>pplied <span style = "font-weight: 700;">S</span>tatistics</span></p>
 
 <hr>
 
